[package]
name = "actixutils"
version = "0.2.0"
edition = "2024"
description = "Reusable middleware and request utilities for Actix Web"
changelog = "CHANGELOG.md"
license = "MIT"
repository = "https://github.com/Ferrumec/actixutils"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
dashmap = "6.2.1"
futures-util = "0.3.32"
jsonwebtoken = { version = "9.3.1", optional = true }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.52.3"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
typed-eventbus = { version = "0.2.1", optional = true }
serde_json = { version = "1.0.150", optional = true }
sqlx = { version = "0.8.6", optional = true, features = ["postgres",  "uuid","chrono","rust_decimal","sqlite"] }
thiserror = { version = "2.0.18", optional = true }
rust_decimal = { version = "1.42.1", optional = true }
viewset-macros = { version = "0.1.0", optional = true }

[features]
es = ["typed-eventbus"]
viewset = ["serde_json","sqlx", "thiserror", "rust_decimal", "viewset-macros" ]
jwt = ["jsonwebtoken"]
